log
Thu, Mar 20, 2025  5:58:02 PM: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
25021aa
Thu, Mar 20, 2025  5:58:32 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
6bd132b
Thu, Mar 20, 2025  6:25:07 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:66:14: error: suggest parentheses around comparison in operand of '|' [-Werror=parentheses]
     if (list == NULL | list->current == NULL | list->current->prev == NULL) {
              ^
list.c:66:68: error: suggest parentheses around comparison in operand of '|' [-Werror=parentheses]
     if (list == NULL | list->current == NULL | list->current->prev == NULL) {
                                                                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
4b77922
Thu, Mar 20, 2025  6:25:18 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:66:14: error: suggest parentheses around comparison in operand of '|' [-Werror=parentheses]
     if (list != NULL | list->current != NULL | list->current->prev != NULL) {
              ^
list.c:66:68: error: suggest parentheses around comparison in operand of '|' [-Werror=parentheses]
     if (list != NULL | list->current != NULL | list->current->prev != NULL) {
                                                                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
890765a
Thu, Mar 20, 2025  6:25:41 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
31b6a95
Thu, Mar 20, 2025  6:29:39 PM: 
 list.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  9|3
total_score: 35/70
832bb21
Thu, Mar 20, 2025  6:36:00 PM: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c:106:7: error: conflicting types for 'pushFront'
 void* pushFront(List* list, void * data) {
       ^
In file included from list.c:4:0,
                 from test.c:5:
list.h:16:6: note: previous declaration of 'pushFront' was here
 void pushFront(List * list, void * data);
      ^
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:107:23: error: 'return' with no value, in function returning non-void [-Werror=return-type]
     if (list == NULL) return; // verifica si la lista existe
                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
5a1edc4
Thu, Mar 20, 2025  6:36:34 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c:106:7: error: conflicting types for 'pushFront'
 void* pushFront(List* list, void * data) {
       ^
In file included from list.c:4:0,
                 from test.c:5:
list.h:16:6: note: previous declaration of 'pushFront' was here
 void pushFront(List * list, void * data);
      ^
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cf5aef4
Thu, Mar 20, 2025  6:37:29 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
b670b24
